[tool.poetry]
name = "randomizbot"
version = "0.1.0"
description = ""
authors = ["Hedy Li <hedyhyry@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
Flask = "^1.1.2"
timer = "^0.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
